# GPLogger

./: .gitignore  CMakeLists.txt  README.md
docs/: 50-myserial.rules
src/: main.cpp
